--- a/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-package-search-result.component.html
+++ b/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-package-search-result.component.html
@@ -180,7 +180,8 @@
 
                 <div class="d-flex align-items-center justify-content-between w-100">
                   <div class="fs-sm">
-                    <div class="d-flex d-md-block d-lg-flex align-items-start mb-2">
+                    <div class="d-flex d-md-block d-lg-flex align-items-start mb-2"
+                    (click)="routeToShop(item.businessProfileCategory.businessProfile.businessProId)">
                       <img class="rounded-circle" src="../../../../../assets/img/37.png" width="48" alt="Annette Black">
                       <div class="pt-md-2 pt-lg-0 ps-3 ps-md-0 ps-lg-3">
                         <h2 class="fs-sm mb-0">
