--- a/Frontend/src/app/view/shop-view/shop-view.component.html
+++ b/Frontend/src/app/view/shop-view/shop-view.component.html
@@ -277,7 +277,9 @@
                         <button class="btn btn-icon btn-light btn-xs text-primary rounded-circle" type="button"
                                 data-bs-toggle="tooltip" data-bs-placement="left" title="Add to favourite"
                                 (click)="setItemFavourite(item,i)" style="padding-bottom: 10px">
-                          <i class="fi-heart-filled" style="font-size: 20px"></i>
+                          <!--<i class="fi-heart-filled" style="font-size: 20px"></i>-->
+                          <i *ngIf="!item.favourite" class="fi-heart" style="font-size: 20px"></i>
+                          <i *ngIf="item.favourite" class="fi-heart-filled" style="font-size: 20px"></i>
                         </button>
                       </div>
                     </div>
@@ -328,22 +330,22 @@
                     <div class="d-flex align-items-center justify-content-between w-100">
                       <div class="fs-sm">
                         <div class="d-flex d-md-block d-lg-flex align-items-start mb-2">
-                          <img class="rounded-circle" src="../../../../../assets/img/37.png" width="48"
-                               alt="Annette Black">
-                          <div class="pt-md-2 pt-lg-0 ps-3 ps-md-0 ps-lg-3">
-                            <h2 class="fs-sm mb-0">
-                              <a style="padding: 0px;font-weight: bold" class="nav-link">
-                                {{item.businessProfileCategory.businessProfile.businessName}}
-                              </a>
-                            </h2>
-                            <div class="star-rating">
-                              <i class="star-rating-icon fi-star-filled active"></i>
-                              <i class="star-rating-icon fi-star-filled active"></i>
-                              <i class="star-rating-icon fi-star-filled active"></i>
-                              <i class="star-rating-icon fi-star-filled active"></i>
-                              <i class="star-rating-icon fi-star-filled active"></i>
-                            </div>
-                          </div>
+                          <!--<img class="rounded-circle" src="../../../../../assets/img/37.png" width="48"-->
+                               <!--alt="Annette Black">-->
+                          <!--<div class="pt-md-2 pt-lg-0 ps-3 ps-md-0 ps-lg-3">-->
+                            <!--<h2 class="fs-sm mb-0">-->
+                              <!--<a style="padding: 0px;font-weight: bold" class="nav-link">-->
+                                <!--{{item.businessProfileCategory.businessProfile.businessName}}-->
+                              <!--</a>-->
+                            <!--</h2>-->
+                            <!--<div class="star-rating">-->
+                              <!--<i class="star-rating-icon fi-star-filled active"></i>-->
+                              <!--<i class="star-rating-icon fi-star-filled active"></i>-->
+                              <!--<i class="star-rating-icon fi-star-filled active"></i>-->
+                              <!--<i class="star-rating-icon fi-star-filled active"></i>-->
+                              <!--<i class="star-rating-icon fi-star-filled active"></i>-->
+                            <!--</div>-->
+                          <!--</div>-->
 
                         </div>
                       </div>
@@ -465,22 +467,22 @@
                     <div class="d-flex align-items-center justify-content-between w-100">
                       <div class="fs-sm">
                         <div class="d-flex d-md-block d-lg-flex align-items-start mb-2">
-                          <img class="rounded-circle" src="../../../../../assets/img/37.png" width="48"
-                               alt="Annette Black">
-                          <div class="pt-md-2 pt-lg-0 ps-3 ps-md-0 ps-lg-3">
-                            <h2 class="fs-sm mb-0">
-                              <a style="padding: 0px;font-weight: bold" class="nav-link">
-                                {{item.businessProfileCategory.businessProfile.businessName}}
-                              </a>
-                            </h2>
-                            <div class="star-rating">
-                              <i class="star-rating-icon fi-star-filled active"></i>
-                              <i class="star-rating-icon fi-star-filled active"></i>
-                              <i class="star-rating-icon fi-star-filled active"></i>
-                              <i class="star-rating-icon fi-star-filled active"></i>
-                              <i class="star-rating-icon fi-star-filled active"></i>
-                            </div>
-                          </div>
+                          <!--<img class="rounded-circle" src="../../../../../assets/img/37.png" width="48"-->
+                               <!--alt="Annette Black">-->
+                          <!--<div class="pt-md-2 pt-lg-0 ps-3 ps-md-0 ps-lg-3">-->
+                            <!--<h2 class="fs-sm mb-0">-->
+                              <!--<a style="padding: 0px;font-weight: bold" class="nav-link">-->
+                                <!--{{item.businessProfileCategory.businessProfile.businessName}}-->
+                              <!--</a>-->
+                            <!--</h2>-->
+                            <!--<div class="star-rating">-->
+                              <!--<i class="star-rating-icon fi-star-filled active"></i>-->
+                              <!--<i class="star-rating-icon fi-star-filled active"></i>-->
+                              <!--<i class="star-rating-icon fi-star-filled active"></i>-->
+                              <!--<i class="star-rating-icon fi-star-filled active"></i>-->
+                              <!--<i class="star-rating-icon fi-star-filled active"></i>-->
+                            <!--</div>-->
+                          <!--</div>-->
 
                         </div>
                       </div>
