--- a/Frontend/src/app/app-customer/view/customer-account/c-favourite/c-favourite.component.html
+++ b/Frontend/src/app/app-customer/view/customer-account/c-favourite/c-favourite.component.html
@@ -39,7 +39,7 @@
       <!-- Catalog grid-->
       <div class="row row-cols-xl-3 row-cols-sm-2 row-cols-1 gy-4 gx-3 gx-xxl-4">
         <!--Item-->
-        <div class="col-sm-12 col-md-6 col-xl-4" *ngFor="let item of items;let i = index">
+        <div class="col-sm-12 col-md-6 col-xl-5" *ngFor="let item of items;let i = index">
           <div class="card shadow-sm card-hover border-0 h-100">
             <div class="tns-carousel-wrapper card-img-top card-img-hover"><a class="img-overlay"></a>
               <div class="position-absolute start-0 top-0 pt-3 ps-3"
@@ -124,7 +124,8 @@
 
               <div class="d-flex align-items-center justify-content-between w-100">
                 <div class="fs-sm">
-                  <div class="d-flex d-md-block d-lg-flex align-items-start mb-2">
+                  <div class="d-flex d-md-block d-lg-flex align-items-start mb-2"
+                       (click)="routeToShop(item.businessProfileCategory.businessProfile.businessProId)">
                     <img class="rounded-circle" src="../../../../../assets/img/37.png" width="48" alt="Annette Black">
                     <div class="pt-md-2 pt-lg-0 ps-3 ps-md-0 ps-lg-3">
                       <h2 class="fs-sm mb-0">
