--- a/Frontend/src/app/app-shop/view/business-account/business-account.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/business-account.component.html
@@ -146,7 +146,10 @@
               (click)="breadCrumbTxt='Profile'"
             ><i class="fi-user opacity-60 me-2"></i>Profile</a
             >
-            <a class="card-nav-link" href="./business-account-review.html"
+            <a class="card-nav-link"
+               [routerLinkActive]="'active'"
+               [routerLink]="'/shop/header/business_account/ba_reviews'"
+               (click)="breadCrumbTxt='Reviews'"
             ><i class="fi-star opacity-60 me-2"></i>Reviews</a
             >
             <a class="card-nav-link" href="./business-account-notifications.html"
