--- a/Frontend/src/app/view/shop-view/shop-view.component.html
+++ b/Frontend/src/app/view/shop-view/shop-view.component.html
@@ -63,16 +63,16 @@
               <div class="tab-pane fade show active" id="biz-item-categories" role="tabpanel">
                 <div class="row row-cols-lg-2 row-cols-1 g-3">
                   <div class="col" *ngFor="let category of businessProfile.businessProfileCategories"
-                  (click)="getItemsBusinessProfile(category.businessCategory.businessCategoryId)">
+                       (click)="getItemsBusinessProfile(category.businessCategory.businessCategoryId)">
                     <a class="icon-box card card-body h-100 border-0 shadow-sm card-hover text-center">
-                    <div class="icon-box-media bg-faded-accent rounded-circle mb-3 mx-auto"><i
-                      [ngStyle]="{'color':selectedCategory.businessCategoryId===category.businessCategory.businessCategoryId?'orangered':'black'}"
-                      class="fi-bed"></i></div>
-                    <h3 class=" fs-base mb-0"
-                        [ngStyle]="{'color':selectedCategory.businessCategoryId===category.businessCategory.businessCategoryId?'orangered':'black'}">
-                      {{category.name}}
-                    </h3>
-                  </a></div>
+                      <div class="icon-box-media bg-faded-accent rounded-circle mb-3 mx-auto"><i
+                        [ngStyle]="{'color':selectedCategory.businessCategoryId===category.businessCategory.businessCategoryId?'orangered':'black'}"
+                        class="fi-bed"></i></div>
+                      <h3 class=" fs-base mb-0"
+                          [ngStyle]="{'color':selectedCategory.businessCategoryId===category.businessCategory.businessCategoryId?'orangered':'black'}">
+                        {{category.name}}
+                      </h3>
+                    </a></div>
                   <!--<div class="col"><a class="icon-box card card-body h-100 border-0 shadow-sm card-hover text-center" href="#">-->
                   <!--<div class="icon-box-media bg-faded-primary text-primary rounded-circle mb-3 mx-auto"><i class="fi-dumbell"></i></div>-->
                   <!--<h3 class="icon-box-title fs-base mb-0">Fitness &amp; Sport</h3></a></div>-->
@@ -110,10 +110,10 @@
                     <h3 class="h4 pb-3">
                       <i class="fi-star-filled mt-n1 me-2 lead align-middle text-warning"></i>4,9 (4 reviews)</h3>
                     <div class="d-flex flex-sm-row flex-md-column align-items-sm-center justify-content-between">
-                      <a class="btn btn-sm btn-outline-primary mb-sm-0 mb-2" href="#add-review"
+                      <a *ngIf="getUser().role==='C'" class="btn btn-sm btn-outline-primary mb-sm-0 mb-2" href="#add-review"
                          data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="add-review"><i
                         class="fi-edit me-1"></i>Add review</a>
-                      <div class="d-flex align-items-center ms-sm-1">
+                      <div class="d-flex align-items-center ms-sm-1" style="margin-top: 20px">
                         <label class="me-2 pe-1 text-nowrap" for="reviews-sorting"><i
                           class="fi-arrows-sort text-muted mt-n1 me-2"></i>Sort by:</label>
                         <select class="form-select" id="reviews-sorting">
@@ -129,55 +129,83 @@
                   <!--add Review-->
                   <div class="collapse mb-4 pb-4" id="add-review">
                     <div class="card card-body">
-                      <form class="needs-validation" novalidate>
+                      <form #reviewForm="ngForm" (ngSubmit)="reviewForm.form.valid && addBusinessReview()" novalidate>
                         <div class="mb-3">
                           <label class="form-label" for="review-rating">Rating <span
                             class='text-danger'>*</span></label>
-                          <select class="form-control form-select" id="review-rating" required>
+                          <select class="form-control form-select" id="review-rating"
+                                  [(ngModel)]="businessReview.rating" #businessReviewRate="ngModel"
+                                  name="businessReviewRate" required>
                             <option value="" selected disabled hidden>Choose rating</option>
-                            <option value="5 stars">5 stars</option>
-                            <option value="4 stars">4 stars</option>
-                            <option value="3 stars">3 stars</option>
-                            <option value="2 stars">2 stars</option>
-                            <option value="1 star">1 star</option>
+                            <option value="5">5 stars</option>
+                            <option value="4">4 stars</option>
+                            <option value="3">3 stars</option>
+                            <option value="2">2 stars</option>
+                            <option value="1">1 star</option>
                           </select>
-                          <div class="invalid-feedback">Please rate the property.</div>
+                          <div
+                            *ngIf="(businessReviewRate.touched || reviewForm.submitted) && businessReviewRate.errors?.required"
+                            class="validErr">
+                            Please rate the property
+                          </div>
                         </div>
                         <div class="mb-4">
                           <label class="form-label" for="review-text">Review <span class='text-danger'>*</span></label>
                           <textarea class="form-control" id="review-text" rows="5" placeholder="Your review message"
-                                    required></textarea>
-                          <div class="invalid-feedback">Please write your review.</div>
+                                    required [(ngModel)]="businessReview.description" #businessReviewDesc="ngModel"
+                                    name="businessReviewDesc"></textarea>
+                          <div
+                            *ngIf="(businessReviewDesc.touched || reviewForm.submitted) && businessReviewDesc.errors?.required"
+                            class="validErr">
+                            Please write your review
+                          </div>
                         </div>
                         <button class="btn btn-success d-block w-100 mb-4" type="submit">Submit a review</button>
                       </form>
                     </div>
                   </div>
                   <!-- Review-->
-                  <div class="mb-4 pb-4 border-bottom">
+                  <div class="mb-4 pb-4 border-bottom" *ngFor="let businessReview of businessReviews">
                     <div class="d-flex justify-content-between mb-3">
                       <div class="d-flex align-items-center pe-2"><img class="rounded-circle me-1"
-                                                                       src="./asset/img/37.png" width="48" alt="Avatar">
+                                                                       src="../../../assets/img/37.png" width="48"
+                                                                       alt="Avatar">
                         <div class="ps-2">
-                          <h6 class="fs-base mb-0">Annette Black</h6><span class="star-rating"><i
-                          class="star-rating-icon fi-star-filled active"></i><i
-                          class="star-rating-icon fi-star-filled active"></i><i
-                          class="star-rating-icon fi-star-filled active"></i><i
-                          class="star-rating-icon fi-star-filled active"></i><i
-                          class="star-rating-icon fi-star-filled active"></i></span>
+                          <h6 class="fs-base mb-0">
+                            {{businessReview.customerProfile.firstName + ' ' + businessReview.customerProfile.lastName}}
+                          </h6>
+                          <!--<span class="star-rating"><i-->
+                          <!--class="star-rating-icon fi-star-filled active"></i><i-->
+                          <!--class="star-rating-icon fi-star-filled active"></i><i-->
+                          <!--class="star-rating-icon fi-star-filled active"></i><i-->
+                          <!--class="star-rating-icon fi-star-filled active"></i><i-->
+                          <!--class="star-rating-icon fi-star-filled active"></i></span>-->
                         </div>
                       </div>
-                      <span class="text-muted fs-sm">Jan 17, 2021</span>
+                      <!--<span class="text-muted fs-sm">Jan 17, 2021</span>-->
+                      <span class="text-muted fs-sm">{{businessReview.postedDate}}</span>
                     </div>
-                    <p>Elementum ut quam tincidunt egestas vitae elit, hendrerit. Ullamcorper nulla amet lobortis elit,
-                      nibh condimentum enim. Aliquam felis nisl tellus sodales lectus dictum tristique proin vitae. Odio
-                      fermentum viverra tortor quis.</p>
+                    <p>{{businessReview.description}}</p>
                     <div class="d-flex align-items-center">
-                      <button class="btn-like" type="button"><i class="fi-like"></i><span>(3)</span></button>
+                      <button class="btn-like" type="button" (click)="addBusinessReviewResponse(businessReview,'like')"
+                              [ngStyle]="{'color':
+              businessReview.responseByMe!==undefined?
+              businessReview.responseByMe.response==='like'?'green':'':''}">
+                        <i class="fi-like"></i>
+                        <span>({{businessReview.likeCount}})</span>
+                      </button>
                       <div class="border-end me-1">&nbsp;</div>
-                      <button class="btn-dislike" type="button"><i class="fi-dislike"></i><span>(0)</span></button>
+                      <button class="btn-dislike" type="button"
+                              (click)="addBusinessReviewResponse(businessReview,'dislike')"
+                              [ngStyle]="{'color':
+              businessReview.responseByMe!==undefined?
+              businessReview.responseByMe.response==='dislike'?'red':'':''}">
+                        <i class="fi-dislike"></i>
+                        <span>({{businessReview.dislikeCount}})</span>
+                      </button>
                     </div>
                   </div>
+
                 </div>
               </div>
             </div>
@@ -197,11 +225,23 @@
         </nav>
         <!-- Title-->
         <div class="d-sm-flex align-items-center justify-content-between pb-3 pb-sm-4 mb-3">
-          <h1 class="h2 mb-sm-0">{{businessProfile.businessName}}</h1>
+          <div style="display: flex">
+            <i *ngIf="getUser().role==='C'" class="fas fa-arrow-circle-left"
+               [routerLink]="getReturnUrl()"
+               style="font-size: 30px;padding-top: 7px"></i>
+            <h1 class="h2 mb-sm-0" style="margin-left: 10px">{{businessProfile.businessName}}</h1>
+          </div>
 
           <a *ngIf="getUser().role==='C'"
-             class="btn btn-round btn-primary d-inline-block fw-bold text-decoration-none py-1" href="#"
-             data-bs-toggle-class="invisible" data-bs-target="#"><i class="fi-like me-2"></i>Follow</a>
+             class="btn btn-round btn-primary d-inline-block fw-bold text-decoration-none py-1"
+             data-bs-toggle-class="invisible" (click)="followBusiness(businessProfile)">
+            <span *ngIf="!businessProfile.followed">
+              <i class="far fa-thumbs-up" style="margin-right: 5px"></i>Follow
+            </span>
+            <span *ngIf="businessProfile.followed">
+              <i class="fas fa-thumbs-up" style="margin-right: 5px"></i>Following
+            </span>
+          </a>
         </div>
         <div class="d-sm-flex align-items-center justify-content-between pb-3 pb-sm-4">
           <div class="mt-md-n3 mb-4 w-100">
@@ -331,20 +371,20 @@
                       <div class="fs-sm">
                         <div class="d-flex d-md-block d-lg-flex align-items-start mb-2">
                           <!--<img class="rounded-circle" src="../../../../../assets/img/37.png" width="48"-->
-                               <!--alt="Annette Black">-->
+                          <!--alt="Annette Black">-->
                           <!--<div class="pt-md-2 pt-lg-0 ps-3 ps-md-0 ps-lg-3">-->
-                            <!--<h2 class="fs-sm mb-0">-->
-                              <!--<a style="padding: 0px;font-weight: bold" class="nav-link">-->
-                                <!--{{item.businessProfileCategory.businessProfile.businessName}}-->
-                              <!--</a>-->
-                            <!--</h2>-->
-                            <!--<div class="star-rating">-->
-                              <!--<i class="star-rating-icon fi-star-filled active"></i>-->
-                              <!--<i class="star-rating-icon fi-star-filled active"></i>-->
-                              <!--<i class="star-rating-icon fi-star-filled active"></i>-->
-                              <!--<i class="star-rating-icon fi-star-filled active"></i>-->
-                              <!--<i class="star-rating-icon fi-star-filled active"></i>-->
-                            <!--</div>-->
+                          <!--<h2 class="fs-sm mb-0">-->
+                          <!--<a style="padding: 0px;font-weight: bold" class="nav-link">-->
+                          <!--{{item.businessProfileCategory.businessProfile.businessName}}-->
+                          <!--</a>-->
+                          <!--</h2>-->
+                          <!--<div class="star-rating">-->
+                          <!--<i class="star-rating-icon fi-star-filled active"></i>-->
+                          <!--<i class="star-rating-icon fi-star-filled active"></i>-->
+                          <!--<i class="star-rating-icon fi-star-filled active"></i>-->
+                          <!--<i class="star-rating-icon fi-star-filled active"></i>-->
+                          <!--<i class="star-rating-icon fi-star-filled active"></i>-->
+                          <!--</div>-->
                           <!--</div>-->
 
                         </div>
@@ -417,7 +457,8 @@
                         <button class="btn btn-icon btn-light btn-xs text-primary rounded-circle" type="button"
                                 data-bs-toggle="tooltip" data-bs-placement="left" title="Add to favourite"
                                 (click)="setItemFavourite(item,i)" style="padding-bottom: 10px">
-                          <i class="fi-heart-filled" style="font-size: 20px"></i>
+                          <i *ngIf="!item.favourite" class="fi-heart" style="font-size: 20px"></i>
+                          <i *ngIf="item.favourite" class="fi-heart-filled" style="font-size: 20px"></i>
                         </button>
                       </div>
                     </div>
@@ -468,20 +509,20 @@
                       <div class="fs-sm">
                         <div class="d-flex d-md-block d-lg-flex align-items-start mb-2">
                           <!--<img class="rounded-circle" src="../../../../../assets/img/37.png" width="48"-->
-                               <!--alt="Annette Black">-->
+                          <!--alt="Annette Black">-->
                           <!--<div class="pt-md-2 pt-lg-0 ps-3 ps-md-0 ps-lg-3">-->
-                            <!--<h2 class="fs-sm mb-0">-->
-                              <!--<a style="padding: 0px;font-weight: bold" class="nav-link">-->
-                                <!--{{item.businessProfileCategory.businessProfile.businessName}}-->
-                              <!--</a>-->
-                            <!--</h2>-->
-                            <!--<div class="star-rating">-->
-                              <!--<i class="star-rating-icon fi-star-filled active"></i>-->
-                              <!--<i class="star-rating-icon fi-star-filled active"></i>-->
-                              <!--<i class="star-rating-icon fi-star-filled active"></i>-->
-                              <!--<i class="star-rating-icon fi-star-filled active"></i>-->
-                              <!--<i class="star-rating-icon fi-star-filled active"></i>-->
-                            <!--</div>-->
+                          <!--<h2 class="fs-sm mb-0">-->
+                          <!--<a style="padding: 0px;font-weight: bold" class="nav-link">-->
+                          <!--{{item.businessProfileCategory.businessProfile.businessName}}-->
+                          <!--</a>-->
+                          <!--</h2>-->
+                          <!--<div class="star-rating">-->
+                          <!--<i class="star-rating-icon fi-star-filled active"></i>-->
+                          <!--<i class="star-rating-icon fi-star-filled active"></i>-->
+                          <!--<i class="star-rating-icon fi-star-filled active"></i>-->
+                          <!--<i class="star-rating-icon fi-star-filled active"></i>-->
+                          <!--<i class="star-rating-icon fi-star-filled active"></i>-->
+                          <!--</div>-->
                           <!--</div>-->
 
                         </div>
@@ -513,3 +554,4 @@
 </main>
 
 <app-item-package-detail-view></app-item-package-detail-view>
+<app-shop-cart></app-shop-cart>
