--- a/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-item/ba-manage-item-edit/ba-manage-item-edit.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-item/ba-manage-item-edit/ba-manage-item-edit.component.html
@@ -523,6 +523,11 @@
            (click)="setDialogBox('Do you want to remove <b>'+item.itemPackage.name+'</b> ?',false)">
           <i class="fi-trash fs-lg me-2"></i>Remove</a>
       </li>
+      <!--<li class="nav-item me-2">-->
+        <!--<a class="btn btn-md btn-outline-primary" href="#item-package-review" data-bs-toggle="tab" role="tab"-->
+           <!--(click)="getItemPackageReviews()">-->
+          <!--<i class="fi-star fs-lg me-2"></i>Reviews</a>-->
+      <!--</li>-->
     </ul>
   </div>
 </div>
