--- a/Frontend/src/app/view/item-package-detail-view/item-package-detail-view.component.html
+++ b/Frontend/src/app/view/item-package-detail-view/item-package-detail-view.component.html
@@ -234,7 +234,7 @@
             </h3>
             <div
               class="d-flex flex-sm-row flex-column align-items-sm-center align-items-stretch justify-content-between">
-              <a *ngIf="getUser().role==='C'" class="btn btn-outline-primary mb-sm-0 mb-3" href="#add-review" data-bs-toggle="collapse" role="button"
+              <a *ngIf="getUser()!==null && getUser().role==='C'" class="btn btn-outline-primary mb-sm-0 mb-3" href="#add-review" data-bs-toggle="collapse" role="button"
                  aria-expanded="false" aria-controls="add-review"><i class="fi-edit me-1"></i>Add review</a>
               <div class="d-flex align-items-center ms-sm-4">
                 <label class="me-2 pe-1 text-nowrap" for="reviews-sorting"><i
@@ -335,8 +335,8 @@
     </div>
   </div>
 
-  <div class="offcanvas-footer border-top" [ngStyle]="{'display': getUser().role==='C'?'flex':'block'}">
-    <button *ngIf="getUser().role==='C'" class="btn btn-icon btn-light btn-xs text-primary rounded-circle" type="button"
+  <div class="offcanvas-footer border-top" [ngStyle]="{'display': (getUser()!==null && getUser().role==='C')?'flex':'block'}">
+    <button *ngIf="getUser()!==null && getUser().role==='C'" class="btn btn-icon btn-light btn-xs text-primary rounded-circle" type="button"
             data-bs-toggle="tooltip" data-bs-placement="left" title="Add to favourite"
             style="padding-bottom: 24px" (click)="setItemFavourite(itemPackage)">
       <i *ngIf="!itemPackage.favourite" class="fi-heart" style="font-size: 26px"></i>
