--- a/Frontend/src/app/app-customer/view/customer-account/customer-account.component.html
+++ b/Frontend/src/app/app-customer/view/customer-account/customer-account.component.html
@@ -1,3 +1,13 @@
+<button class="btn btn-icon btn-light rounded-circle position-fixed top-50 end-0 translate-middle-y me-3"
+        type="button" data-bs-toggle="tooltip" data-bs-placement="left" title="cart"
+        style="z-index: 1035;color: #FD5631;border: 2px solid #FD5631">
+  <div
+    class="d-flex align-items-center justify-content-center position-absolute top-0 start-0 w-100 h-100 rounded-circle"
+    data-bs-toggle="offcanvas" data-bs-target="#cart-viewer">
+    <i class="fi-cart" style="color: #FD5631;font-weight: bold"></i>
+  </div>
+</button>
+
 <div class="container pt-5 pb-lg-4 mt-5 mb-sm-2">
   <!-- Breadcrumb-->
   <nav class="mb-4 pt-md-3" aria-label="Breadcrumb">
